--- a/index.html
+++ b/index.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=ß, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepsi</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    
+    <nav>
+        <div class="left-nav">
+            <img src="img/pepsi-logo.png">
+            <a href="#">View Products</a>
+            <a href="#">Whats New</a>
+            <a href="#">Newsletter</a>
+            <a href="#">Contact Us</a>
+        </div>
+        <div class="right-nav">
+            <a href="#">Buy Pepsi Products</a>
+        </div>
+    </nav>
+
+    <section>
+        <div class="main-content">
+            <img class="can" src="img/nitro-can.png">
+            <div class="main-content-right">
+                <img class="logo" src="img/nitro-logo.png">
+                <p>SMOOTH, CREAMY,<br>DELICIOUS</p>
+                <a href="#">LEARN MORE</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
